--- a/fe/app/globals.css
+++ b/fe/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #111827;
     --foreground: #ededed;
   }
 }
@@ -18,4 +18,22 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer utilities {
+  .custom-scrollbar {
+    scrollbar-width: thin; /* Firefox */
+    scrollbar-color: #4a5568 #111827; /* Thumb color and background color */
+  }
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #cbd5e0; /* Track color */
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #4a5568; /* Thumb color */
+    border-radius: 4px;
+    border: 4px solid #cbd5e0; /* Optional: adds a border around the thumb */
+  }
 }
